--- a/kontakty.html
+++ b/kontakty.html
@@ -3,7 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="./style.css" />
+    <title>Kontakty</title>
   </head>
-  <body></body>
+  <body class="bady">
+    <nav class="navg">
+      <p class="po">Adres</p>
+      <address>Warszawa</address>
+      <p class="po">Masz mail</p>
+      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <p class="po">Nasz numer telefonu</p>
+      <a href="callto:+48 96 111 11 11">+48 96 111 11 11</a>
+    </nav>
+  </body>
 </html>
