--- a/pomoc.html
+++ b/pomoc.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
+    <title>Pomóc</title>
+  </head>
+  <body class="bady">
+    <p class="po">Jak możecie nam pomóc</p>
+    <p class="po">
+      Zwierżątka potrzebują karmy (listę karm można poprośić u nas przez meila)
+      Można przynieść zabawki dla kotków i piesków Potrzebne podkłady dla małych
+      piesków i kotków MOżna przyjść i wziąć zwierątek na spacer (zapewniamy
+      wszystkie potrzebne rzeczy dla spaceru )
+    </p>
+    <p class="po">Ale najważniejsze co możesz zrobić to kogoś wziąć do domu</p>
+  </body>
 </html>
