--- a/galeria.html
+++ b/galeria.html
@@ -3,12 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="./style.css" />
+    <title>Galeria</title>
   </head>
-  <body>
+  <body class="bady">
+    <h1 class="nadg">Gallery</h1>
     <ul class="galeria">
       <img src="./img/dogs.jpg" alt="" />
+      <img src="./img/cat1.jpg" alt="" />
       <img src="./img/people-with-dog.jpg" alt="" />
+      <img src="./img/cat2.jpg" alt="" />
     </ul>
   </body>
 </html>
