--- a/index.html
+++ b/index.html
@@ -12,19 +12,26 @@
     <title>Pet_Lovers</title>
   </head>
   <body class="body">
-    <nav class="navigation">
-      <ul class="tekst">
-        <h1>Pet Lovers</h1>
-        <h2></h2>
-        <p></p>
-      </ul>
-      <menu class="menu">
-        <li><a href="./galeria.html">galeria</a></li>
-        <li><a href="./o nas.html">o nas</a></li>
-        <li><a href="./pomoc.html">pomoc</a></li>
-        <li><a href="./kontakty.html">kontakt</a></li>
-      </menu>
-    </nav>
-    <img class="picture" src="./img/POSTER.jpg" alt="" />
+    <ul class="all">
+      <nav class="navigation">
+        <ul class="tekst">
+          <h1>Pet Lovers</h1>
+          <h2>Nie kupuj, a daj komuś nowy dom!</h2>
+          <p>
+            Jesteśmy organizacją pomagającej zwierzętam. Mamy kotów i piesków
+            różnych rodzajów i wieków.
+          </p>
+        </ul>
+
+        <menu class="menu">
+          <a href="#" class="logo">Pet_Lovers</a>
+          <li><a href="./galeria.html">galeria</a></li>
+          <li><a href="./o nas.html">o nas</a></li>
+          <li><a href="./pomoc.html">pomoc</a></li>
+          <li><a href="./kontakty.html">kontakt</a></li>
+        </menu>
+      </nav>
+      <img class="picture" src="./img/POSTER.jpg" alt="" />
+    </ul>
   </body>
 </html>
