--- a/o nas.html
+++ b/o nas.html
@@ -6,5 +6,15 @@
     <link rel="stylesheet" href="./style.css" />
     <title>O nas</title>
   </head>
-  <body class="bady"></body>
+  <body class="bady">
+    <ul class="inf">
+      <h1>O nas</h1>
+      <p>
+        Założyliśmy to schronisko, aby pomagać kotom i psom. Staramy się
+        zapewnić dla nich jak najlepsze warunki. Wstęp do schroniska jest
+        bezpłatny, można zabrać pupila na spacer lub do domu na jakiś czas.
+      </p>
+      <p>Bardzo zachęcamy do adaptowania zwierząt.</p>
+    </ul>
+  </body>
 </html>
