--- a/pomoc.html
+++ b/pomoc.html
@@ -7,13 +7,14 @@
     <title>Pomóc</title>
   </head>
   <body class="bady">
-    <p class="po">Jak możecie nam pomóc</p>
-    <p class="po">
+    <h2 class="pod">Jak możecie nam pomóc</h2>
+
+    <p class="pod">
       Zwierżątka potrzebują karmy (listę karm można poprośić u nas przez meila)
       Można przynieść zabawki dla kotków i piesków Potrzebne podkłady dla małych
       piesków i kotków MOżna przyjść i wziąć zwierątek na spacer (zapewniamy
       wszystkie potrzebne rzeczy dla spaceru )
     </p>
-    <p class="po">Ale najważniejsze co możesz zrobić to kogoś wziąć do domu</p>
+    <p class="pod">Ale najważniejsze co możesz zrobić to kogoś wziąć do domu</p>
   </body>
 </html>
